# boo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  api.py  bot.py  compose.dev.yml  compose.yml  config.py  main.py  mise.toml  nginx.conf  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-and-push.yml  deploy-asr-api.yml  deploy-embeddings-api.yml  tests.yml
assets/: manager-api.postman_collection.json
bot/: bot.py  commands.py  events.py  utils.py
commands/: admin.py  general.py
data/: Discourse_Posts_06_09_24.csv  requirements.txt
data/fine-tuning/: generator.py
data/grading-doc/: grading_doc.md  pre-processing.ipynb  scrape.ipynb
data/prompts/: 1015137991624245290.txt  default_prompt.txt  system.txt
embeddings/: main.py  pyproject.toml
llm/: api.py
manager/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum
manager/static/: admin.html  index.html  openapi.json  swagger.html
modal/asr/: main.py  pyproject.toml
modal/embeddings/: README.md  main.py  pyproject.toml
runpod-serverless/: Dockerfile  README.md  pyproject.toml  rp_handler.py  test_input.json
sandbox/: Dockerfile  app.py  pyproject.toml
services/: ai_service.py  api_service.py  llm_service.py  tenor_service.py  weather_service.py
src/: main.py  temporal_worker.py  worker.py
src/activities/: discord_rest.py  image.py  llm.py  manager.py  meili.py  models.py
src/bot/: bot.py  events.py
src/cogs/: error_handler.py  image_handler.py  memory_management.py  message_handler.py
src/commands/: admin.py  general.py  metrics.py
src/services/: asr_service.py  async_caller_service.py  db_service.py  discourse_service.py  github_service.py  image_processing_service.py  llm_service.py  meilisearch_service.py  openrouter_service.py  queue_service.py  task_queue_service.py  temporal_client.py  tenor_service.py  tool_calling_service.py  vector_service.py  voyageai_service.py  weather_service.py  workers_service.py
src_go/: DISCORD_BOT_TODO.md  go.mod  go.sum  main.go
tests/: test_utils.py
utils/: config.py  emoji_utils.py  logger.py  message_utils.py  utils.py
(+61 files in other folders)
