[project]
name = "boo"
version = "1.1.0"
description = "Boo is a snark-powered Discord bot that mixes Large-Language-Models, image magic and classic utility commands."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "certifi==2025.7.9",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "discord-ext-voice-recv>=0.5.2a179",
    "discord-py[voice]==2.5.2",
    "distro==1.9.0",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "hiredis==3.2.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "meilisearch>=0.37.1",
    "multidict==6.6.3",
    "openai==1.97.1",
    "pandas>=2.3.3",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pynacl>=1.5.0",
    "pypdf>=6.1.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "redis==6.2.0",
    "regex==2025.7.34",
    "requests==2.32.4",
    "rq>=2.6.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tavily-python==0.7.10",
    "tiktoken==0.10.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "voyageai>=0.3.5",
    "yarl==1.20.1",
]

[tool.uv.workspace]
members = [
    "embeddings",
]

