[project]
name = "sandbox"
version = "0.1.0"
description = "Code execution sandbox service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "scipy>=1.15.1",
    "requests>=2.32.3",
    "pillow>=11.1.0",
    "sympy>=1.13.3",
]
