[project]
name = "embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.116.1",
  "modal>=1.1.4",
  "numpy>=2.3.2",
  "pillow>=11.3.0",
  "sentence-transformers>=5.1.0",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
]
